Draft index.html layout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,73 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Landing Page</title>
+        <title>About Me</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <body>
+        <div class="header">
+            <div class="left">About Me</div>
+            <div class="right">
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">hobbies</a></li>
+                    <li><a href="#">contact</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="card1">
+            <div class="left1">
+                <h1>Well, what should I say?</h1>
+                <p>I think I am more of a cat person rather than a dog person. Here is an example of a cute cat.</p>
+                <button>Very Cute!</button>
+            </div>
+            <div class="right1">    
+                <img src="images/cat-pic.jpg" alt="Cat Picture" style="width:400px">
+            </div>
+        </div>
+
+        <div class="card2">
+            <h2>I have a specfic set of skills.</h2>
+            <div class="options">
+                <div class="option">
+                    <div class="box">1</div>
+                    <p>I enjoy drawing very much.</p>
+                </div>
+                <div class="option">
+                    <div class="box">1</div>
+                    <p>I sing and play guitar (Filipino-coded).</p>
+                </div>
+                <div class="option">
+                    <div class="box">1</div>
+                    <p>I like making websites (like this one).</p>
+                </div>
+                <div class="option">
+                    <div class="box">1</div>
+                    <p>I like making games (check them out)!</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card3">
+            <h3>"You died"</h3>
+            <h4>-Dark Souls</h4>
+        </div>
+
+        <div class="card4">
+            <div class="signup">
+                <div class="left4">
+                    <h5>Call to action! Hit the button!</h5>
+                    <p>The button will so something really cool! Maybe</p>
+                </div>
+                <div class="right4">
+                    <button>Hit Me!</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer">
+            Not really copyrighted :D
+        </div>
+    </body>
 </html>
