Complete style.css for page formatting

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="header">
-            <div class="left">About Me</div>
+            <div class="left">All About Me</div>
             <div class="right">
                 <ul>
                     <li><a href="#">home</a></li>
@@ -21,10 +21,11 @@
 
         <div class="card1">
             <div class="left1">
-                <h1>Well, what should I say?</h1>
-                <p>I think I am more of a cat person rather than a dog person. Here is an example of a cute cat.</p>
+                <h1>Well, what <br> should I say?</h1>
+                <p>I think I am more of a cat person rather than a dog person. Here is an example of a cute cat. I think my favorite type of cat right now is ragdolls (not pictured).</p>
                 <button>Very Cute!</button>
             </div>
+
             <div class="right1">    
                 <img src="images/cat-pic.jpg" alt="Cat Picture" style="width:400px">
             </div>
@@ -34,19 +35,19 @@
             <h2>I have a specfic set of skills.</h2>
             <div class="options">
                 <div class="option">
-                    <div class="box">1</div>
+                    <img src="images/art.jpg" alt="Art" style="width:200px">
                     <p>I enjoy drawing very much.</p>
                 </div>
                 <div class="option">
-                    <div class="box">1</div>
-                    <p>I sing and play guitar (Filipino-coded).</p>
+                    <img src="images/music.jpg" alt="Music" style="width:200px">
+                    <p>I like to sing and play guitar.</p>
                 </div>
                 <div class="option">
-                    <div class="box">1</div>
+                    <img src="images/website.jpg" alt="Website" style="width:200px">
                     <p>I like making websites (like this one).</p>
                 </div>
                 <div class="option">
-                    <div class="box">1</div>
+                    <img src="images/gaming.jpg" alt="Gamedev" style="width:200px">
                     <p>I like making games (check them out)!</p>
                 </div>
             </div>
@@ -61,7 +62,7 @@
             <div class="signup">
                 <div class="left4">
                     <h5>Call to action! Hit the button!</h5>
-                    <p>The button will so something really cool! Maybe</p>
+                    <p>The button will so something really cool! Maybe...</p>
                 </div>
                 <div class="right4">
                     <button>Hit Me!</button>
